--- a/.github/workflows/gradle-build-scan.yml
+++ b/.github/workflows/gradle-build-scan.yml
@@ -1,9 +1,8 @@
-name: Upload artifacts to ge.armeria.dev
+name: Upload Gradle build scans to ge.armeria.dev
 
 on:
   push:
     branches: [ armeria ]
-
 
 
 
@@ -108,34 +107,3 @@ jobs:
         env:
           BUILD_SCANS: ${{ steps.upload-build-scans.outputs.BUILD_SCANS }}
           PR_NUMBER: ${{ steps.get-pr-number.outputs.PR_NUMBER }}
-
-  upload-build-cache:
-    runs-on: ${{ matrix.on }}
-    timeout-minutes: 120
-    strategy:
-      fail-fast: false
-      matrix:
-        on: [ self-hosted, macos-12, windows-latest ]
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.COMMIT_SHA }}
-
-      - id: setup-build-jdk
-        name: Set up build JDK ${{ env.BUILD_JDK_VERSION }}
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: ${{ env.BUILD_JDK_VERSION }}
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Build with Gradle
-        run: |
-          ./gradlew --no-daemon --stacktrace --build-cache build \
-          ${{ (matrix.on == 'self-hosted') && '--max-workers=8' || '--max-workers=2' }} --parallel \
-          -PbuildJdkVersion=${{ env.BUILD_JDK_VERSION }} \
-          -Pretry=true -PfailOnPassedAfterRetry=false \
-          -Porg.gradle.java.installations.paths=${{ steps.setup-build-jdk.outputs.path }}
-        shell: bash
